Starting on WorkItem Get.  Cleaned up V VM.  Had 6 VM for Context !

--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemMain.xaml
@@ -2,7 +2,7 @@
     x:Class="AZDORestApiExplorer.WorkItemTracking.Presentation.Views.WorkItemMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:prism="http://www.codeplex.com/prism"
+    xmlns:prism="http://prismlibrary.com/"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 
