--- a/AZDORestApiExplorer.Dashboard/Presentation/Views/WidgetMain.xaml
+++ b/AZDORestApiExplorer.Dashboard/Presentation/Views/WidgetMain.xaml
@@ -2,7 +2,7 @@
     x:Class="AZDORestApiExplorer.Dashboard.Presentation.Views.WidgetMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:prism="http://www.codeplex.com/prism"
+    xmlns:prism="http://prismlibrary.com/"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 
@@ -20,7 +20,7 @@
     
     xmlns:views="clr-namespace:AZDORestApiExplorer.Dashboard.Presentation.Views"
     xmlns:viewModels="clr-namespace:AZDORestApiExplorer.Dashboard.Presentation.ViewModels"
-    xmlns:infra="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"
+    xmlns:core="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"
     prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800"
