--- a/AZDORestApiExplorer/Presentation/Views/Categories/CoreMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Categories/CoreMain.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:infra="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"
+    xmlns:core="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800">
     <d:DesignerProperties.DesignStyle>
@@ -34,19 +34,19 @@
 
             <dxlc:LayoutGroup Header="Processes">
                 <Grid>
-                    <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.ProcessMainRegion}" />
+                    <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.ProcessMainRegion}" />
                 </Grid>
             </dxlc:LayoutGroup>
 
             <dxlc:LayoutGroup Header="Projects">
                 <Grid>
-                    <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.ProjectMainRegion}" />
+                    <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.ProjectMainRegion}" />
                 </Grid>
             </dxlc:LayoutGroup>
 
             <dxlc:LayoutGroup Header="Teams">
                 <Grid>
-                    <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.TeamMainRegion}" />
+                    <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.TeamMainRegion}" />
                 </Grid>
             </dxlc:LayoutGroup>
             
