--- a/AZDORestApiExplorer/Presentation/Views/Categories/DashboardMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Categories/DashboardMain.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:infra="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"
+    xmlns:core="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800">
     <d:DesignerProperties.DesignStyle>
@@ -34,13 +34,13 @@
 
         <dxlc:LayoutGroup Header="Dashboards">
             <Grid>
-                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.DashboardMainRegion}" />
+                <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.DashboardMainRegion}" />
             </Grid>
         </dxlc:LayoutGroup>
 
         <dxlc:LayoutGroup Header="Widgets">
             <Grid>
-                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.WidgetMainRegion}" />
+                <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.WidgetMainRegion}" />
             </Grid>
         </dxlc:LayoutGroup>
         
