--- a/AZDORestApiExplorer/Presentation/Views/Categories/PermissionsReportMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Categories/PermissionsReportMain.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:infra="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"
+    xmlns:core="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800">
     <d:DesignerProperties.DesignStyle>
