--- a/AZDORestApiExplorer/Presentation/Views/Categories/WorkItemTrackingMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Categories/WorkItemTrackingMain.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:infra="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"
+    xmlns:core="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800">
     <d:DesignerProperties.DesignStyle>
@@ -34,78 +34,78 @@
 
         <dxlc:LayoutGroup Header="Artifact Link Types">
             <Grid>
-                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.ArtifactLinkTypeMainRegion}" />
+                <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.ArtifactLinkTypeMainRegion}" />
             </Grid>
         </dxlc:LayoutGroup>
 
         <dxlc:LayoutGroup Header="Work Item Icons">
             <Grid>
-                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.WorkItemIconMainRegion}" />
+                <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.WorkItemIconMainRegion}" />
             </Grid>
         </dxlc:LayoutGroup>
 
         <dxlc:LayoutGroup Header="Work Item Relation Types">
             <Grid>
-                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.WorkItemRelationTypeMainRegion}" />
+                <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.WorkItemRelationTypeMainRegion}" />
             </Grid>
         </dxlc:LayoutGroup>
 
         <dxlc:LayoutGroup Header="ClassificationNodes">
             <Grid>
-                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.ClassificationNodeMainRegion}" />
+                <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.ClassificationNodeMainRegion}" />
             </Grid>
         </dxlc:LayoutGroup>
 
         <dxlc:LayoutGroup Header="Fields">
             <Grid>
-                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.FieldWITMainRegion}" />
+                <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.FieldWITMainRegion}" />
             </Grid>
         </dxlc:LayoutGroup>
 
         <dxlc:LayoutGroup Header="Queries">
             <Grid>
-                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.QueryMainRegion}" />
+                <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.QueryMainRegion}" />
             </Grid>
         </dxlc:LayoutGroup>
 
         <dxlc:LayoutGroup Header="Tags">
             <Grid>
-                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.TagMainRegion}" />
+                <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.TagMainRegion}" />
             </Grid>
         </dxlc:LayoutGroup>
 
         <dxlc:LayoutGroup Header="Templates">
             <Grid>
-                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.TemplateMainRegion}" />
+                <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.TemplateMainRegion}" />
             </Grid>
         </dxlc:LayoutGroup>
 
         <dxlc:LayoutGroup Header="Work Item Type Categories">
             <Grid>
-                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.WorkItemTypeCategoryMainRegion}" />
+                <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.WorkItemTypeCategoryMainRegion}" />
             </Grid>
         </dxlc:LayoutGroup>
 
         <dxlc:LayoutGroup Header="States">
             <Grid>
-                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.StateWITMainRegion}" />
+                <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.StateWITMainRegion}" />
             </Grid>
         </dxlc:LayoutGroup>
 
         <dxlc:LayoutGroup Header="Work Item Types">
             <Grid>
-                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.WorkItemTypeWITMainRegion}" />
+                <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.WorkItemTypeWITMainRegion}" />
             </Grid>
         </dxlc:LayoutGroup>
 
         <dxlc:LayoutGroup Header="Work Item Types Fields">
             <Grid>
-                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.WorkItemTypesFieldMainRegion}" />
+                <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.WorkItemTypesFieldMainRegion}" />
             </Grid>
         </dxlc:LayoutGroup>
 
         <dxlc:LayoutGroup Header="Work Items">
-            <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.WorkItemMainRegion}" />
+            <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.WorkItemMainRegion}" />
         </dxlc:LayoutGroup>
 
     </dxlc:LayoutGroup>
