--- a/AZDORestApiExplorer/Presentation/Views/CommandsGet.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/CommandsGet.xaml
@@ -1,5 +1,6 @@
 ﻿<vncmvvm:ViewBase
     x:Class="AZDORestApiExplorer.Presentation.Views.CommandsGet"
+    x:Name="thisCommandsGet"      
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -16,6 +17,7 @@
     </d:DesignerProperties.DesignStyle>
 
     <UserControl.Resources />
+    
     <ScrollViewer>
 
         <dxlc:LayoutGroup Orientation="Vertical">
@@ -811,6 +813,25 @@
                         View="GroupBox" />
                 </WrapPanel>
             </dxlc:LayoutGroup>
+
+            <dxlc:LayoutGroup VerticalAlignment="Bottom">
+
+                    <StackPanel  Orientation="Horizontal" DockPanel.Dock="Left">
+                        <StackPanel Orientation="Horizontal" Margin="5">
+                            <Label Content="V:" />
+                            <Label Content="{Binding ElementName=thisCommandsGet, Path=InstanceCountV}" />
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="5">
+                            <Label Content="VM:" />
+
+                            <Label Content="{Binding InstanceCountVM}" />
+                        </StackPanel>
+                    </StackPanel>
+
+            </dxlc:LayoutGroup>
+            
         </dxlc:LayoutGroup>
+        
     </ScrollViewer>
+    
 </vncmvvm:ViewBase>
