--- a/AZDORestApiExplorer/Presentation/Views/ContextMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/ContextMain.xaml
@@ -1,15 +1,18 @@
 ﻿<vncmvvm:ViewBase
     x:Class="AZDORestApiExplorer.Presentation.Views.ContextMain"
+    x:Name="thisContextMain"      
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+       
+    
+    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
     
     xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:prism="http://www.codeplex.com/prism"
+    xmlns:prism="http://prismlibrary.com/"
     xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.Core"
-    prism:ViewModelLocator.AutoWireViewModel="True"
+    prism:ViewModelLocator.AutoWireViewModel="False"
     mc:Ignorable="d"
 >
     <d:DesignerProperties.DesignStyle>
@@ -176,7 +179,7 @@
         	        IsCollapsible="True"  IsCollapsed="False">
 
                     <dxlc:LayoutItem HorizontalAlignment="Left" Label="WorkItem ID:" LabelPosition="Left">
-                        <dxe:TextEdit Text="{Binding Context.SelectedWorkItem.id}" />
+                        <dxe:TextEdit Text="{Binding Context.WorkItemId, Mode=TwoWay}" />
                     </dxlc:LayoutItem>
                     
                     <dxlc:LayoutGroup Header="Work Item Type"
@@ -217,7 +220,25 @@
                 </dxlc:LayoutGroup>
              
             </dxlc:LayoutGroup>
-            
+
+            <dxlc:LayoutGroup VerticalAlignment="Bottom">
+                <DockPanel Grid.Row="1" >
+
+                    <StackPanel  Orientation="Horizontal" DockPanel.Dock="Left">
+                        <StackPanel Orientation="Horizontal" Margin="5">
+                            <Label Content="V:" />
+                            <Label Content="{Binding ElementName=thisContextMain, Path=InstanceCountV}" />
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="5">
+                            <Label Content="VM:" />
+
+                            <Label Content="{Binding InstanceCountVM}" />
+                        </StackPanel>
+                    </StackPanel>
+
+                </DockPanel>
+            </dxlc:LayoutGroup>
+
         </dxlc:LayoutControl>
         
     </Grid>
